auth frontend added
