# _backend/src/auth/auth.controller.ts
@@ -1,9 +1,7 @@
 import { Body, Controller, HttpCode, HttpStatus, Post, UseGuards } from '@nestjs/common';
 import { ApiTags, ApiOperation, ApiResponse, ApiBearerAuth, ApiBody } from '@nestjs/swagger';
 import { AuthService } from './auth.service';
-import { SignUpDto } from './dto';
-import { Tokens } from './types';
-import { SignInDto } from './dto/signin.dto';
+import { AuthResponseDto, SignInDto, SignUpDto } from './dto';
 import { AtGuard, RtGuard } from './common/guards';
 import { GetCurrentUser, GetCurrentUserId } from './common/decorators';
 
@@ -11,28 +9,28 @@ import { GetCurrentUser, GetCurrentUserId } from './common/decorators';
 @Controller('auth')
 export class AuthController {
 
-    constructor(private authService: AuthService) {}
+    constructor(private authService: AuthService) { }
 
     @ApiOperation({ summary: 'Sign up a new user' })
-    @ApiResponse({ status: HttpStatus.CREATED, description: 'User successfully signed up'})
+    @ApiResponse({ status: HttpStatus.CREATED, description: 'User successfully signed up', type: AuthResponseDto })
     @ApiBody({ type: SignUpDto })
     @Post('local/signup')
     @HttpCode(HttpStatus.CREATED)
-    localSignup(@Body() signupDto: SignUpDto): Promise<Tokens> {
+    localSignup(@Body() signupDto: SignUpDto): Promise<AuthResponseDto> {
         return this.authService.localSignup(signupDto);
     }
 
     @ApiOperation({ summary: 'Sign in an existing user' })
-    @ApiResponse({ status: HttpStatus.OK, description: 'User successfully signed in'})
+    @ApiResponse({ status: HttpStatus.OK, description: 'User successfully signed in', type: AuthResponseDto })
     @ApiBody({ type: SignInDto })
     @Post('local/signin')
     @HttpCode(HttpStatus.OK)
-    localSignin(@Body() signInDto: SignInDto): Promise<Tokens> {
+    localSignin(@Body() signInDto: SignInDto): Promise<AuthResponseDto> {
         return this.authService.localSignin(signInDto);
     }
 
     @ApiOperation({ summary: 'Refresh access and refresh tokens' })
-    @ApiResponse({ status: HttpStatus.OK, description: 'Tokens successfully refreshed'})
+    @ApiResponse({ status: HttpStatus.OK, description: 'Tokens successfully refreshed', type: AuthResponseDto })
     @ApiBearerAuth()
     @UseGuards(RtGuard)
     @Post('local/refresh')
@@ -40,7 +38,7 @@ export class AuthController {
     refreshTokens(
         @GetCurrentUser('refreshToken') rt: string,
         @GetCurrentUserId() userId: string,
-    ): Promise<Tokens> {
+    ): Promise<AuthResponseDto> {
         return this.authService.refreshTokens(userId, rt);
     }
 
