# _frontend/src/api/index.ts
@@ -3,9 +3,14 @@
 /* tslint:disable */
 /* eslint-disable */
 
+export type { AuthResponseDto } from './models/AuthResponseDto';
 export type { CreateProductDto } from './models/CreateProductDto';
 export type { Product } from './models/Product';
+export type { SignInDto } from './models/SignInDto';
+export type { SignUpDto } from './models/SignUpDto';
 export type { UpdateProductDto } from './models/UpdateProductDto';
+export type { User } from './models/User';
 
+export { AuthService } from './services/AuthService';
 export { DefaultService } from './services/DefaultService';
 export { ProductsService } from './services/ProductsService';
